update example .env

--- a/.env.local-example
+++ b/.env.local-example
@@ -29,3 +29,6 @@ LOGIN_PASS='yourPasswordHashHere'
 
 #Allow login (0=NO; 1=YES)
 ALLOW_LOGIN=1
+
+#External API URL (NestJS)
+API_URL='http://localhost'
