--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "drizzle-orm": "^0.44.4",
     "jose": "^6.1.0",
     "lucide-react": "^0.540.0",
-    "next": "15.4.4",
+    "next": "^15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
     "react-toastify": "^11.0.5",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
+    "server-only": "^0.0.1",
     "slugify": "^1.6.6",
     "uuid": "^11.1.0",
     "zod": "^3.24.0"
@@ -39,7 +40,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/sanitize-html": "^2.16.0",
-    "drizzle-kit": "^0.31.4",
+    "drizzle-kit": "^0.18.1",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
     "sanitize-html": "^2.17.0",
